# Polymarket-Trader

./: .gitignore  AGENTS.md  CLAUDE.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.local.json
.claude/memory/: MEMORY.md  project_startup_bugs.md
config/: default.yaml
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: api.ts
data/: paper_trading.sqlite  system_state.json
docs/: PRDV4.md  Plan.md  modelsv4.md  report1.md  specv4.md
migrations/: env.py
migrations/versions/: 5e8f04ccc37e_initial_schema.py
src/: __init__.py  __main__.py
src/absence/: __init__.py  manager.py  types.py
src/agents/: __init__.py  base.py  compression.py  escalation.py  prompts.py  providers.py  regime.py  registry.py  types.py
src/bias/: __init__.py  audit.py  detector.py  types.py
src/calibration/: __init__.py  accumulation.py  brier.py  friction.py  segments.py  sizing.py  store.py  types.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  constants.py  enums.py  types.py
tests/: conftest.py  test_config.py  test_constants.py  test_core_enums.py  test_core_types.py  test_logging.py  test_phase10_tradeability_execution.py  test_phase11_position_management.py  test_phase12_calibration.py  test_phase12_learning.py  test_phase13_cross_cutting.py  test_phase14_notifications.py  test_phase15_dashboard.py  test_phase15c_workflows.py  test_phase2_data_model.py  test_phase4_eligibility.py  test_phase5_scanner.py  test_phase8_agents.py  test_phase9_investigation.py
(+149 files in other folders)
